--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HTML Academy: Седона</title>
         <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
         <link href="css/normalize.css" rel="stylesheet">
-        <link  href="css/style_min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div class="main-wrapper">
@@ -29,7 +29,7 @@
                     <img src="img/welcome-text.png" height="353" width="459" class = "pic-welcome" alt="Добро пожаловать в Седону">
                 </section>
                 <div class="main-promo-wrapper">
-                    <b class="promo-bold">Седона &mdash; небольшой городок в Аризоне,<br> заслуживающий большего!</b>
+                    <b class="promo-bold">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</b>
                     <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
                 </div>
                 <section class="advantages">
@@ -187,6 +187,6 @@
             </div>
         </footer>
     </div>
-    <script src="js/popup_min.js"></script>
+    <script src="js/popup.js"></script>
   </body>
 </html>
