--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HTML Academy: Седона</title>
         <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
         <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style_min.css" rel="stylesheet">
     </head>
     <body>
         <div class="main-wrapper">
@@ -99,7 +99,7 @@
                         <p class="hotels-info">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                     </div>
                 <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
-                <section class="modal modal-hotels-search">
+                <section class="modal modal-hotels-search modal-open">
                     <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
                         <p class="hotels-search-item arrival-date">
                             <label for="arrival-date-field">Дата заезда:</label>
@@ -109,6 +109,7 @@
                                     <path fill="#a9a9a9" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
                                     <path fill="#a9a9a9" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
                                 </svg>
+                                <span class="visually-hidden">Календарь</span>
                             </button>
                         </p>
                         <p class="hotels-search-item departure-date">
@@ -119,17 +120,26 @@
                                     <path fill="#a9a9a9" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
                                     <path fill="#a9a9a9" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
                                 </svg>
+                                <span class="visually-hidden">Календарь</span>
                             </button>
                         </p>
                          <p class="hotels-search-item persons-number">
                                  <label for="adults-number-field" class="adults-number">Взрослые:</label>
-                                 <button type="button" class="button hotel-search-button-minus"></button>
+                                 <button type="button" class="button hotel-search-button-minus">
+                                     <span class="visually-hidden">Минус</span>
+                                 </button>
                                  <input type="text" name="adults-number" id="adults-number-field" class="adults-number-input" placeholder="2">
-                                 <button type="button" class="button hotel-search-button-plus"></button>
+                                 <button type="button" class="button hotel-search-button-plus">
+                                     <span class="visually-hidden">Плюс</span>
+                                 </button>
                                  <label for="children-number-field" class="children-number">Дети:</label>
-                                 <button type="button" class="button hotel-search-button-minus"></button>
+                                 <button type="button" class="button hotel-search-button-minus">
+                                     <span class="visually-hidden">Минус</span>
+                                 </button>
                                  <input type="text" name="children-number" id="children-number-field" class="children-number-input" placeholder="0">
-                                 <button type="button" class="button hotel-search-button-plus"></button>
+                                 <button type="button" class="button hotel-search-button-plus">
+                                     <span class="visually-hidden">Плюс</span>
+                                 </button>
                         </p>
                         <button class="button hotel-search-button" type="submit">Найти</button>
                     </form>
@@ -187,6 +197,6 @@
             </div>
         </footer>
     </div>
-    <script src="js/popup.js"></script>
+    <script src="js/popup_min.js"></script>
   </body>
 </html>
